--- a/latex-svg-pandoc/latex-svg-pandoc.cabal
+++ b/latex-svg-pandoc/latex-svg-pandoc.cabal
@@ -1,6 +1,6 @@
-cabal-version: 2.2
-name:          latex-svg-pandoc
-version:       0.2
+cabal-version:      2.2
+name:               latex-svg-pandoc
+version:            0.2.1
 synopsis:
   Render LaTeX formulae in pandoc documents to images with an actual LaTeX
 
@@ -15,15 +15,16 @@ description:
   .
   This is a fork of https://github.com/liamoc/latex-formulae
 
-homepage:      http://github.com/phadej/latex-svg#readme
-license:       BSD-3-Clause
-license-file:  LICENSE
-author:        Oleg Grenrus, Liam O'Connor
-maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
-copyright:     2020 Oleg Grenrus, 2015-2019 Liam O'Connor
-category:      Image
-build-type:    Simple
-tested-with:   GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3
+homepage:           http://github.com/phadej/latex-svg#readme
+license:            BSD-3-Clause
+license-file:       LICENSE
+author:             Oleg Grenrus, Liam O'Connor
+maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
+copyright:          2020 Oleg Grenrus, 2015-2019 Liam O'Connor
+category:           Image
+build-type:         Simple
+tested-with:        GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3
+extra-source-files: CHANGELOG.md
 
 source-repository head
   type:     git
@@ -36,7 +37,7 @@ library
   ghc-options:      -Wall
   exposed-modules:  Image.LaTeX.Render.Pandoc
   build-depends:
-    , base             >=4.10      && <4.14
+    , base             >=4.10     && <4.14
     , bytestring       ^>=0.10
     , directory        ^>=1.3.0.1
     , filepath         ^>=1.4.1.2
