Use cabal-fmt fragment for tested-with

--- a/latex-svg-hakyll/latex-svg-hakyll.cabal
+++ b/latex-svg-hakyll/latex-svg-hakyll.cabal
@@ -16,7 +16,9 @@ maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
 copyright:     2020 Oleg Grenrus, 2015-2019 Liam O'Connor
 category:      Image
 build-type:    Simple
-tested-with:   GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3
+
+-- cabal-fmt: fragment ../tested-with.fragment
+tested-with:   GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4
 
 source-repository head
   type:     git
@@ -29,7 +31,7 @@ library
   ghc-options:      -Wall
   exposed-modules:  Hakyll.Contrib.LaTeX
   build-depends:
-    , base              >=4.10      && <4.14
+    , base              >=4.10     && <4.14
     , hakyll            ^>=4.12.5.2 || ^>=4.13.0.0
     , latex-svg-image   ^>=0.2
     , latex-svg-pandoc  ^>=0.2
