--- a/latex-svg-image/latex-svg-image.cabal
+++ b/latex-svg-image/latex-svg-image.cabal
@@ -26,7 +26,9 @@ maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
 copyright:     2020 Oleg Grenrus, 2015-2019 Liam O'Connor
 category:      Image
 build-type:    Simple
-tested-with:   GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3
+
+-- cabal-fmt: fragment ../tested-with.fragment
+tested-with:   GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4
 
 source-repository head
   type:     git
